acer.css
*{
    padding:0;
    margin:0;
}
.main-container{
    width:100%;
}
.header{
    width:100%;
    height:56px;
    background:#f0f0f0;
    
    
}
.header-2{
    width: 100%;
    height: 60px;
}
.list-left{
    list-style-type: none;
    float:left;
    display:flex;
    padding:0;
    padding-top: 20px;

}
.list-left li{
    margin-left: 20px;
    font-size: 16px;
    color:  #474747 ;
    font-family: sans-serif;

}
.list-left li:hover{
  color:#80c343;
  /* text-decoration: underline; */
  cursor: pointer;
}

.list-right{
    list-style-type: none;
    float:right;
    display:flex;
    padding-top: 20px;

}
.list-right li{
    margin-right: 20px;
    font-size: 16px;
    color:  #474747 ;
    font-family: sans-serif;
   
}
.list-right li:hover{
  color:#80c343;
  /* text-decoration: underline; */
  cursor: pointer;
}

.left-menu{
width:25%;
height:60px;
float:left;
background-color: white;

}
.center-list li:hover{
    color:#80c343;
    /* text-decoration: underline; */
    cursor: pointer;
}


.right-menu{
    width:25%;
    height:60px;
    float:left;
    background-color: white;
    

}
.search-bar{
border-radius:  20px;
font-family: sans-serif;
width: 180px;
height:29px;
padding-left: 18px;
padding-top: 2px;
margin-top: 13px;
font-size: 16px;
margin-left: 160px;
border-color:#474747;
}
.center-list{
    list-style-type: none;
    float:left;
    display:flex;
    align-items: center;
    margin: 0px;
    padding-left: 120px;
   
}
.center-list li{
    margin: 20px;
    font-size: 16px;
    color:  #474747 ;
    font-family: sans-serif;
    justify-content: center;

}
.pic-cover{
    width:100%;
    height: 500px;
    background-image: url('2023GPC_post-event_Acer_banner_Primary-Hero-XL.webp');
    background-size: cover;
    background-position: center;

}
.text1{
    font-size:38px;
    color:#ffffff;
    padding-top:40px;
    font-family: sans-serif;
    margin-top: 4px;
    margin-left:240px ;
    font-weight: bold;
    
    
}
.text2{
    font-size:38px;
    color:#ffffff;
    padding-top:40px;
    font-family: sans-serif;
    margin-top: 10px;
    margin-left:240px ;
    font-weight: bold;
}
.text3{
    color:#ffffff;
    font-size:20px;
    margin-left:240px;
    margin-top:3px;
    font-family: sans-serif;

}

.button-img{
    background-color:#ffffff;
    color:#000000;
    margin-left:240px;
    font-family: sans-serif;
    border:2px;
    width:220px;
    height:50px;
    font-weight:bold;
    text-align:center;
    font-size:15px;
    border-color: #ffffff;
    
}
.button-img:hover{
    background-color: #000000;
    color:#ffffff
}
.bold-text{
    color:222222;
    font-size: 38px;
    font-weight: bold;
    font-family:sans-serif;
   
    width:100%;
    height: 100px;
    display:flex;
    justify-content: center;
    align-items: center;  
}

.pic-main{
    width:90%;
    display:flex;
    height:250px;
    margin:auto;


}
.pic1 img{
    height: 150px;
    width:210px;
  padding: 0px 10px;
}
.pic1{
    text-align: center;
    padding-top: 40px;
    font-size: 16px;
    font-family: sans-serif;
    cursor: pointer;
}
.pic1:hover{
    font-weight: bold;
    transition: 0.25s;

}
.pic-main2{
    width:100%;
    display:flex;
    height:342px;
    margin:auto;
    align-items:center;
}
.pic2 img{
    height: 329.5px;
    width:329.5px;
  padding: 5px;
}

.pic2{
    text-align: center;
    padding-top: 20px;
    padding-bottom: 20px;
    cursor: pointer;
    padding-left: 35px;
}
.pic2-hover{
        padding: 50px;
        transition: transform .2s; /* Animation */
        width: 200px;
        height: 200px;
        margin: 0 auto;
      }
      
      .pic2:hover {
        transform: scale(0.8); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
      }
      .main-name{
        width:100%;
        display:flex;
        height: 200px;
        margin:auto;
        align-items:center;
        padding-top:none;
       
      }

      .textA{
        font-size:20px;
        color:#222222;
        padding-top:40px;
        font-family: sans-serif;
       margin:0px 0px 8px;
        font-weight: bold;
      }
      .textB{
        font-size:16px;
        color:#474747;
        padding-top:0.9px;
        font-family: sans-serif;
       margin:0px 0px 16px;
      }
      .textC{
        font-size:16px;
        color:#474747;
        padding-top:0.9px;
         font-family: sans-serif;
        margin:14px 0px 14x; 
        background-color: none;
      }
      .name-text{
        padding-left: 105px;
        padding-right: 105px;
      }
u:hover{
color:#80c343;
}
.textC:hover{
    font-size:16px;
    color:#80c343;
    text-decoration: underline;
    padding-top:0.9px;
    font-family: sans-serif;
    margin:14px 0px 14x; 
  }
  .main-options{
    width:100%;
    display:flex;
    height: 420px;
    margin:auto;
    padding-top:none;
   background-color: #f0f0f0;
   padding-left: 90px;
   
   
  }
  .options1{
    color: #222222;
    font-size: 14px;
    padding:3.2px 0px;
    font-family: sans-serif;
    list-style-type: none;

  }
  .list1{
    list-style-type: none;
    font-family: sans-serif;
    padding-top:10px;
    
  }

  .list1 li{
    margin-bottom:10px
  }
  .same-font{
    font-weight: bold;
    font-family: sans-serif;
    font-size: 20px;
    padding:3.2px 0px;
    width: 367.8px;
    height:33.6;
    list-style-type: none;
    padding-top: 10px;
  }

  

  .footer{
    width: 100%;
    background-color: #000000;
    height: 130px;
    margin:auto;
    align-items:center;
    padding-top:none;
  }
  .text-footer{
    color:#fff;
    padding-top: 40px;
    padding-left: 40px;
    display:flex;

  }
  .right-footer{
    width: 10%;
    height:130px;
    float: right;
    background-color: #080908;
  }

  .right-footer img{
    width:50%;
    height:34px;
    padding:5px;
    float: right;
  

  }
  .left-footer{
    width: 50%;
    height:130px;
    float: left;
  }
  .fa {
    padding: 10px;
    font-size: 8px;
    width: 17px;
    text-align: center;
    text-decoration: none;
    border-radius: 50%;
    margin-top: 6px;
    margin-right: 50% 50%;
    margin-left: 50% 50%;
  }
  .fa:hover {
    opacity: 0.7;
}
  .fa-facebook {
     background: #474747;;
     color:#fff;
  } 
  .fa-instagram {
    background: #474747;;
    color: white;
  }

  .fa-twitter {
    background: #474747;
    color: white;
  }
  
  .text{
    color: #fff;
    padding-top: 20px;
    padding-left: 60px;
    
  }
  

